--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -28,7 +23,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="header-top">
 				<div class="user">
-					<a href="index.html"><img src="images/logo.JPEG" width="808px" height="540px"></a>
+					<a href="index.html"><img src="images/logo.jpg" width="508px" height="340px"></a>
 				</div>
 				<!--
 				<div class="social-icons">
@@ -44,19 +39,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="about_user">
 				<ul class="place">
 					<li><i class="location"></i></li>
-					<li>Shanghai, China</li>
+					<li>Nalanda Bihar, India</li>
 				</ul>
 				<ul class="status">
-					<li><i class="love"></i></li>
-					<li>Be In Loved</li>
+					<li><i class="Lab Assistant"></i></li>
+					<li>Tezpur University</li>
 				</ul>
 				<ul class="message">
 					<li><i class="msg"></i></li>
-					<li><a href="enerald@sjtu.edu.cn">enerald@sjtu.edu.cn</a></li>
+					<li><a niranjankumar101096@gmail.com">niranjankumar101096@gmail.com</a></li>
 				</ul>
 				<ul class="call">
 					<li><i class="phone"></i></li>
-					<li>+86 18616904667</li>
+					<li>+91 8721991213</li>
 				</ul>
 				<div class="clearfix"></div>
 			</div>
@@ -64,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--
 			<p>A designer, blogger and entrepreneur. Founded online communities including <a href="#">thedesignwork </a>& <a href="#"> examplegallery</a>. Self-motivated and innovative individual with over 9 years of experience.</p>
 			-->
-			<p>I am Qi Liu (刘琦), a Ph.D candidate of Computer Science in Shanghai Jiao Tong University. My research interests mainly focus on computer graphics and computer vision.</p>
+			<p>I Am Niranjan Kumar, a M.Tech candidate of Computer Science and Engineering in Tezpur University. My research interests mainly focus on Deep Learning and Web Technology vision.</p>
 		</div>
 		</div>
 	</div>
@@ -91,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"></div>
 			</div>
 		</div>
-		-->
+		
 		<div class="middle-grid">
 			<div class="container">
 				<h3>Publications</h3>
@@ -133,96 +128,43 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 		</div>
+			-->			
 		<div class="container">
 			<div class="bottom-grid">
 				<div class="col-md-6 bottom-grid-left">
 					<h3>Education</h3>
 					<div class="grids">
 						<div class="year text-center">
-							<h5>2016</h5>
+							<h5> 2018-19 </h5>
 						</div>
 						<div class="qualification">
-							<h4>Ph.D Candidate</h4>
-							<p>Shanghai Jiao Tong University</p>
+							<h4>Pursuing M.Tech Candidate</h4>
+							<p>Tezpur University</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 					<div class="grids">
 						<div class="year text-center">
-							<h5>2012</h5>
+							<h5>2017</h5>
 						</div>
 						<div class="qualification">
-							<h4>Undergraduate</h4>
-							<p>Dalian University of Technology</p>
+							<h4>B.Tech</h4>
+							<p>Tezpur University </p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 					<div class="grids">
 						<div class="year text-center">
-							<h5>2009</h5>
+							<h5>2013</h5>
 						</div>
 						<div class="qualification">
-							<h4>Senior High School Student</h4>
-							<p>Linyi NO.1 High School of Shandong Province</p>
+							<h4>12th Student</h4>
+							<p>Gramin Inter Collage Diripar Nalanda Bihar</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 				</div>
-				<!--
-				<div class="col-md-6 bottom-grid-right">
-					<h3>Awards</h3>
-					<div class="grids">
-						<div class="year year2 text-center">
-							<h5>2011</h5>
-						</div>
-						<div class="qualification">
-							<h4>Special Performance</h4>
-							<p>i2c Inc</p>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="grids">
-						<div class="year year2 text-center">
-							<h5>2009</h5>
-						</div>
-						<div class="qualification">
-							<h4>Special Performance</h4>
-							<p>i2c Inc</p>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="grids">
-						<div class="year year2 text-center">
-							<h5>2009</h5>
-						</div>
-						<div class="qualification">
-							<h4>Winner Poster Design</h4>
-							<p>Ghulam Ishaq Khan University</p>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="grids">
-						<div class="year year2 text-center">
-							<h5>2003</h5>
-						</div>
-						<div class="qualification">
-							<h4>Award of Excellence</h4>
-							<p>Aptech Computer Education</p>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="grids">
-						<div class="year year2 text-center">
-							<h5>2003</h5>
-						</div>
-						<div class="qualification">
-							<h4>Winner Web Competition</h4>
-							<p>Aptech Computer Education</p>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-				-->
+				
 				<div class="clearfix"></div>
 			</div>
 		</div>
@@ -230,7 +172,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="footer">
 		<div class="container">
 			<div class="copyrights text-center">
-				<p>Copyright &copy; 2015 All rights reserved | Template by  <a href="http://w3layouts.com">  W3layouts</a></p>
+				<p>Copyright &copy; 2018 All rights reserved </p>
 			</div>
 		</div>
 	</div>
