--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</ul>
 				<ul class="message">
 					<li><i class="msg"></i></li>
-					<li><a niranjankumar101096@gmail.com">niranjankumar101096@gmail.com</a></li>
+					<li><a niranjankumar101096@gmail.com>niranjankumar101096@gmail.com</a></li>
 				</ul>
 				<ul class="call">
 					<li><i class="phone"></i></li>
@@ -56,9 +56,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"></div>
 			</div>
 		<div class="text">
-			<!--
-			<p>A designer, blogger and entrepreneur. Founded online communities including <a href="#">thedesignwork </a>& <a href="#"> examplegallery</a>. Self-motivated and innovative individual with over 9 years of experience.</p>
-			-->
+			
 			<p>I Am Niranjan Kumar, a M.Tech candidate of Computer Science and Engineering in Tezpur University. My research interests mainly focus on Deep Learning and Web Technology vision.</p>
 		</div>
 		</div>
