--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		<div class="text">
 			
-			<p>I Am Niranjan Kumar, a M.Tech candidate of Computer Science and Engineering in Tezpur University. My research interests mainly focus on Deep Learning and Web Technology vision.</p>
+			<p>I Am Niranjan Kumar, a M.Tech graduate of Computer Science and Engineering in Tezpur University. My research interests mainly focus on Deep Learning and Web Technology vision.</p>
 		</div>
 		</div>
 	</div>
