--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</ul>
 				<ul class="status">
 					<li><i class="Lab Assistant"></i></li>
-					<li>Tezpur University</li>
+					<li><a Tezpur University</a>http://www.tezu.ernet.in/</li>
 				</ul>
 				<ul class="message">
 					<li><i class="msg"></i></li>
