--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li>Nalanda Bihar, India</li>
 				</ul>
 				<ul class="status">
-					<li><i class="Lab Assistant"></i></li>
+					<li><i class="location"></i>http://www.tezu.ernet.in</li>
+					
 					<li><a Tezpur University</a>http://www.tezu.ernet.in/</li>
 				</ul>
 				<ul class="message">
